--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="top-page-element">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" 
+    <a class="more-info" 
       href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
