--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="page">
   <div class="top">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-info" 
@@ -16,7 +16,7 @@
   <div class="centered-main">
     <p id="add-section">
       <label for="new-task">Add Item</label>
-      <div class="task-row">
+      <div class="new-task-label">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
