--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="page">
-  <div class="top">
+  <header class="top">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-info" 
       href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
-  </div>
-  <div class="centered-main">
-    <p id="add-section">
+  </header>
+  <main class="centered-main">
+    <h1>Todo App</h1>
+    <section id="add-section">
       <label for="new-task">Add Item</label>
       <div class="new-task-label">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
-    </p>
-    <h3>Todo</h3>
+    </section>
+    <section id="incomplete-tasks-section">
+      <h2>Todo</h2>
     <ul id="incomplete-tasks">
       <li>
         <input type="checkbox">
@@ -41,7 +43,7 @@
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h2>Completed</h2>
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
@@ -53,7 +55,8 @@
         </button>
       </li>
     </ul>
-  </div>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
