--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="page">
   <header class="top">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="more-info" 
       href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
@@ -31,7 +31,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove button">
         </button>
       </li>
       <li class="edit-mode">
@@ -39,7 +39,7 @@
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button><button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove button">
         </button>
       </li>
     </ul>
@@ -51,7 +51,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove button">
         </button>
       </li>
     </ul>
