--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="centered-main">
     <h1>Todo App</h1>
     <section id="add-section">
-      <label for="new-task">Add Item</label>
+      <label class="new-task">Add Item</label>
       <div class="new-task-label">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
