--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 </head>
 <body class="page">
   <header class="top">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+    <img class="top__eisenhower-matrix" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="more-info" 
       href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
   </header>
   <main class="centered-main">
-    <h1>Todo App</h1>
+    <h1 class="page-title">Todo App</h1>
     <section id="add-section">
       <label class="new-task">Add Item</label>
       <div class="new-task-label">
         <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <button class="task-list__item__edit">Add</button>
       </div>
     </section>
     <section id="incomplete-tasks-section">
-      <h2>Todo</h2>
+      <h2 class="tasks-title">Todo</h2>
     <ul id="incomplete-tasks">
       <li>
         <input type="checkbox">
@@ -31,7 +31,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg" alt="Remove button">
+          <img class="task-list__item__remove-img" src="./remove.svg" alt="Remove button">
         </button>
       </li>
       <li class="edit-mode">
@@ -39,11 +39,11 @@
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button><button class="delete">
-          <img src="./remove.svg" alt="Remove button">
+          <img class="task-list__item__remove-img" src="./remove.svg" alt="Remove button">
         </button>
       </li>
     </ul>
-    <h2>Completed</h2>
+    <h2 class="tasks-title">Completed</h2>
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
@@ -51,7 +51,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg" alt="Remove button">
+          <img class="task-list__item__remove-img" src="./remove.svg" alt="Remove button">
         </button>
       </li>
     </ul>
