--- a/index.html
+++ b/index.html
@@ -15,42 +15,43 @@
   </header>
   <main class="centered-main">
     <h1 class="page-title">Todo App</h1>
-    <section id="add-section">
-      <label class="new-task">Add Item</label>
-      <div class="new-task-label">
-        <input id="new-task"class="task" type="text">
+    <section id="add-section" class="new-task">
+      <label class="new-task__label" for="new-task">Add Item</label>
+      <div class="new-task__task-row">
+        <input id="new-task" class="new-task__input" type="text">
         <button class="task-list__item__edit">Add</button>
       </div>
     </section>
     <section id="incomplete-tasks-section">
       <h2 class="tasks-title">Todo</h2>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+    <ul id="incomplete-tasks" class="task-list">
+      <li class="task-list__item">
+        <input type="checkbox" class="task-list__item__checkbox">
+        <label class="task-list__item__label">Pay Bills</label>
+        <input type="text" class="task-list__item__input">
+        <button class="task-list__item__edit">Edit</button>
+        <button class="task-list__item__delete">
           <img class="task-list__item__remove-img" src="./remove.svg" alt="Remove button">
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button><button class="delete">
+      <li class="task-list__item edit-mode">
+        <input type="checkbox" class="task-list__item__checkbox">
+        <label class="task-list__item__label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task-list__item__input">
+        <button class="task-list__item__edit">Save</button>
+        <button class="task-list__item__delete">
           <img class="task-list__item__remove-img" src="./remove.svg" alt="Remove button">
         </button>
       </li>
     </ul>
     <h2 class="tasks-title">Completed</h2>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+    <ul id="completed-tasks" class="task-list">
+      <li class="task-list__item">
+        <input type="checkbox" checked class="task-list__item__checkbox">
+        <label class="task-list__item__label">See the Doctor</label>
+        <input type="text" class="task-list__item__input">
+        <button class="task-list__item__edit">Edit</button>
+        <button class="task-list__item__delete">
           <img class="task-list__item__remove-img" src="./remove.svg" alt="Remove button">
         </button>
       </li>
